changed some text

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               </div>
               <img class="img-fluid" src="img/portfolio/coilsdone.png" alt="">
             </a>
-            <p class="subTitle">Loc Maintence</p>
+            <p class="subTitle">Coil Locs</p>
           </div>
 
           <div class="col-md-6 col-lg-4">
@@ -131,7 +131,7 @@
               </div>
               <img class="img-fluid" src="img/portfolio/creativitydone.png" alt="">
             </a>
-            <p class="subTitle">Loc Maintence</p>
+            <p class="subTitle">Creativity</p>
           </div>
           
     </section>
